@@ -105,6 +105,7 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
   preference is set
 * Maintenance script cleanupTitles is now able to fix titles stored
 in a negative namespace (which is invalid).
+* (bug 19858) Removed obsolete <big> in interface messages.
 
 === API changes in 1.17 ===
 * (bug 22738) Allow filtering by action type on query=logevent
